@@ -527,7 +527,8 @@
 
 0.3.18 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 	* Added port for the STMicro STR71x processor and configuration for the Olimex STR-P711
-	  board (untested as of the initial checkin).
+	  board (STR71x testing is stalled because I have been unable to get OpenOCD to
+	  communicate with my JTAG wiggler on Linux).
 	* Fix race condition workaround delay in LPC214X SPI logic.  It the cause of the very
 	  bad MMC/SD performance.
 
